--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "weather": "./bin/weather.js"
+    "weather": "bin/weather.js"
   },
   "repository": {
     "type": "git",
